--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,26 @@
 .mb-4{
   margin-bottom: 2em;
 }
+.mb-3{
+  margin-bottom: 1.5em;
+}
+.mr-3{
+  margin-right: 1.5em;
+}
+
+.justify-content-around{
+  justify-content: space-around;
+}
+.p-3{
+  padding: 1.5em;
+}
+.p-2{
+  padding: 1em;
+}
+.pt-0{
+  padding-top:0 ;
+}
+
+.pointer{
+  cursor: pointer;
+}
